# my_drone_sim

./: CMakeLists.txt  README.md  package.xml
launch/: launch_drones.py
worlds/bookstore/: bookstore.world
worlds/bookstore/models/aws_robomaker_retail_RetailShopFloor_01/: model.sdf
