<?xml version="1.0"?>
<package format="3">
  <name>my_drone_sim</name>
  <version>1.0.0</version>
  <description>A simple package to launch drones in Gazebo</description>

  <maintainer email="matrixdaphna@gmail.com">Your Name</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <build_depend>gazebo_ros</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
